# kamiyo-protocol

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .gitmodules  .meishi-writer-rollout.json  .pnpm-approve-builds.json  .render-workspace-lock.json  .renderctl.json  API_DEPLOYMENT_FIX.md  ARCHITECTURE.md  AUTH_IMPLEMENTATION_SUMMARY.md  A_PLUS_PRODUCTION_READY.md  Anchor.toml  BLOCKER3_FIX_SUMMARY.md  BUILD.md  BUILD_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_SUMMARY.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION_GUIDE.md  CONFIGURATION_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  Cargo.toml  DASHBOARD_SUBDOMAIN_SCOPE.md  DASHBOARD_SUBDOMAIN_SETUP.md  DEPLOYMENT.md  DEPLOY_X402_SAAS.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  EMAIL_PASSWORD_AUTH_IMPLEMENTATION.md  ERC8004_A_PLUS_ACHIEVEMENT.md  ERC8004_B_GRADE_ASSESSMENT.md  ERC8004_CORRECTED_ASSESSMENT.md  ERC8004_CRITICAL_BUGS_FIXED.md  ERC8004_DATABASE_ARCHITECTURE_FIXED.md  ERC8004_DATABASE_READY.md  (+124 more)
.devcontainer/: devcontainer.json  (+1 more)
crates/kamiyo-reality-fork-cli/: Cargo.toml  README.md
crates/kamiyo-reality-fork-cli/assets/: reality-fork-cli.mjs
crates/kamiyo-reality-fork-cli/src/: config.rs  diff.rs  main.rs  render.rs  repo.rs  scoring.rs  solana.rs  types.rs
crates/kamiyo-trust-layer/: Cargo.toml  README.md
crates/kamiyo-trust-layer/src/: engine.rs  error.rs  hash.rs  lib.rs  model.rs  proofs.rs
crates/kamiyo-trust-layer/tests/: engine.rs
crates/kani-solana/: Cargo.toml  README.md
crates/kani-solana/src/: bounds.rs  generators.rs  lib.rs  math.rs  risk.rs  staking.rs  token.rs
crates/kani-solana/src/agent/: account.rs  mod.rs  pda.rs  state_machine.rs
crates/kani-solana/tests/: account_info_verify.rs  agent_verify.rs  self_verify.rs
crates/mitama-zk/: Cargo.toml  README.md  SECURITY.md
crates/mitama-zk/src/: bridge.rs  commitment.rs  error.rs  lib.rs  poseidon.rs  prover.rs  solana.rs  utils.rs
crates/mitama-zk/src/circuits/: oracle_vote.rs
crates/mitama-zk/tests/: integration.rs
native/tetsuo-core/: CMakeLists.txt  Makefile  README.md  setup-mcl.sh  tetsuo.pc.in
native/tetsuo-core/.github/workflows/: ci.yml
native/tetsuo-core/bench/: bench_field.c  bench_verify.c
native/tetsuo-core/docs/: AGENC_INTEGRATION.md  PRODUCTION_READINESS.md
native/tetsuo-core/examples/: .gitignore  agent_trust_demo.c
native/tetsuo-core/fuzz/: fuzz_field.c  fuzz_proof.c
native/tetsuo-core/src/: agenc_zk.c  agenc_zk.h  api.c  arena.c  arena.h  error.c  error.h  field.c  field.h  log.c  log.h  pairing.c  pairing.h  poseidon_constants.h  tetsuo.h  verify.c  verify.h
native/tetsuo-core/tests/: test_field.c  test_pairing.c  test_verify.c
noir/programs/noir-verifier/: Cargo.toml
noir/programs/noir-verifier/src/: error.rs  groth16.rs  lib.rs  state.rs
programs/hive/: Cargo.toml
programs/hive/src/: kani_proofs.rs  lib.rs  vk_generated.rs  zk.rs
programs/kamiyo/: Cargo.toml
programs/kamiyo-agent-collab/: Cargo.toml
programs/kamiyo-agent-collab/src/: lib.rs  vk_generated.rs
programs/kamiyo-escrow/: Cargo.toml
programs/kamiyo-escrow/src/: lib.rs
programs/kamiyo-fast-voting/: Cargo.toml
programs/kamiyo-fast-voting/src/: lib.rs
programs/kamiyo-governance/: Cargo.toml
programs/kamiyo-governance/src/: lib.rs
programs/kamiyo-singularity-orderbook/: Cargo.toml
programs/kamiyo-singularity-orderbook/src/: errors.rs  lib.rs
programs/kamiyo-singularity-orderbook/src/instructions/: cancel_order.rs  consume_events.rs  defi.rs  enterprise.rs  initialize_config.rs  initialize_position.rs  mod.rs  place_order.rs  place_order_v2.rs  resolve_market.rs  settle_trade.rs  social.rs  trading_agent.rs  update_keeper.rs
programs/kamiyo-singularity-orderbook/src/state/: defi.rs  event_heap.rs  mod.rs  open_orders.rs  orderbook.rs  social.rs  trading_agent.rs
programs/kamiyo-staking/: Cargo.toml
programs/kamiyo-staking/src/: kani_proofs.rs  lib.rs
programs/kamiyo-transfer-hook/: Cargo.toml
programs/kamiyo-transfer-hook/src/: lib.rs
programs/kamiyo/src/: kani.rs  kani_proofs.rs  lib.rs  zk.rs
programs/kamiyo/tests/: dispute_flow.rs
programs/meishi/: Cargo.toml
programs/meishi/src/: lib.rs
programs/mitama/: Cargo.toml
programs/mitama/src/: lib.rs  vk_generated.rs  zk.rs
programs/swarmteams/: Cargo.toml
programs/swarmteams/src/: lib.rs  vk_generated.rs  zk.rs
programs/yumori/: Cargo.toml
programs/yumori/src/: lib.rs  zk.rs
services/agent-factory/workspace/kamiyo-bounty-resolver/: Anchor.toml  Cargo.toml  README.md  demo.ts
services/agent-factory/workspace/kamiyo-bounty-resolver/examples/: agent-integration.ts
services/agent-factory/workspace/kamiyo-bounty-resolver/programs/kamiyo-bounty-resolver/: Cargo.toml
services/agent-factory/workspace/kamiyo-bounty-resolver/programs/kamiyo-bounty-resolver/src/: lib.rs
services/agent-factory/workspace/kamiyo-bounty-resolver/sdk/: bounty-client.ts  index.ts
services/agent-factory/workspace/kamiyo-bounty-resolver/tests/: kamiyo-bounty-resolver.ts
services/reality-fork-sim/: Dockerfile  pyproject.toml  requirements.txt
services/reality-fork-sim/src/: app.py  config.py  utils.py
services/reality-fork-sim/src/extraction/: claim_extractor.py  entity_extractor.py  topic_modeler.py
services/reality-fork-sim/src/pipeline/: chunker.py  pdf_reader.py  url_fetcher.py
services/reality-fork-sim/src/report/: decision_engine.py  generator.py  sections.py
services/reality-fork-sim/src/routes/: extract.py  ingest.py  report.py  simulate.py
services/reality-fork-sim/src/simulation/: agent_factory.py  hypothesis_engine.py  oasis_runner.py  scoring.py
services/trust-layer-service/: .env.example  Cargo.toml  README.md
services/trust-layer-service/e2e/: docker-compose.e2e.yml  run-fault-injection.sh
services/trust-layer-service/observability/grafana/: trust-layer-service-dashboard.json
services/trust-layer-service/observability/prometheus/: alerts.yaml
services/trust-layer-service/src/: api.rs  config.rs  db.rs  dead_letter.rs  main.rs  metrics.rs  model.rs  outbox.rs  payload.rs  replay.rs
(+2443 files in other folders)
