[workspace]
members = [
    "programs/kamiyo",
    "programs/kamiyo-escrow",
    "programs/kamiyo-staking",
    "programs/kamiyo-governance",
    "programs/kamiyo-transfer-hook",
    "programs/swarmteams",
    "programs/kamiyo-fast-voting",
    "programs/meishi",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin versions to be compatible with the Solana BPF toolchain
# Keep `blake3` pinned to 1.5.5 in Cargo.lock.
# Newer blake3 versions use edition2024 which the Solana BPF toolchain doesn't support yet.
