[workspace]
members = [
    "crates/kani-solana",
    "crates/kamiyo-trust-layer",
    "services/trust-layer-service",
    "programs/kamiyo",
    "programs/kamiyo-escrow",
    "programs/kamiyo-staking",
    "programs/kamiyo-governance",
    "programs/kamiyo-transfer-hook",
    "programs/kamiyo-singularity-market",
    "programs/kamiyo-singularity-orderbook",
    "programs/hive",
    "programs/kamiyo-fast-voting",
    "programs/meishi",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin versions/toolchain to be compatible with Solana SBF builds.
# If CI fails parsing a transitive dependency that uses edition2024 (e.g. constant_time_eq via blake3),
# bump SOLANA_VERSION in workflows to a release that bundles a newer Cargo/Rust toolchain.
