[package]
name = "kamiyo-reality-fork-cli"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Native CLI for KAMIYO Reality Fork — repo-aware launch stress tests and on-chain agent management."
readme = "README.md"
repository = "https://github.com/kamiyo-ai/kamiyo-protocol"
homepage = "https://github.com/kamiyo.ai/"
keywords = ["kamiyo", "cli", "reality-fork", "solana", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "reality-fork"
path = "src/main.rs"

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
walkdir = "2"
colored = "3"
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
ctrlc = "3"
bs58 = "0.5"
sha2 = "0.10"
curve25519-dalek = { version = "4", default-features = false }
ed25519-dalek = { version = "2", features = ["std"] }
ureq = { version = "2", features = ["json"] }
borsh = { version = "1", features = ["derive"] }
base64 = "0.22"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
