[package]
name = "kamiyo-escrow"
version = "0.1.0"
description = "KAMIYO Companion escrow - pay only if it helped"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "4.0.0"
