[package]
name = "kamiyo-singularity-orderbook"
version = "0.1.0"
description = "KAMIYO Singularity orderbook - order placement, matching, and settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_singularity_orderbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["lean"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Deployment profiles
lean = []                                           # Core trading only (~200 KB)
full = ["agents", "social", "enterprise", "defi", "events"]

# Optional modules (enable individually or via "full")
agents = []                                         # AI trading agents
social = []                                         # Copy trading, profiles
enterprise = []                                     # Multi-tenant PaaS
defi = []                                           # Yield vaults, margin
events = []                                         # Event queue batching

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
blake3 = "1.8.2"
constant_time_eq = "0.4.2"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
proptest = "1.6.0"
