[package]
name = "kamiyo"
version = "0.1.0"
description = "Kamiyo - Agent Identity and Conflict Resolution Protocol for Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/kamiyo-ai/kamiyo-protocol"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["default"] }
switchboard-on-demand = "0.10.5"
groth16-solana = "0.2.0"

[dev-dependencies]
solana-program-test = "=2.2.2"
solana-sdk = "=2.2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = "1.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
