[package]
name = "meishi"
version = "0.1.0"
description = "Meishi - Agent Compliance Passports for the agent economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meishi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.31.1"
