[package]
name = "mitama"
version = "0.1.0"
description = "Mitama - Agent Identity and Conflict Resolution Protocol for Solana"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/kamiyo-ai/mitama"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "mitama"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["default"] }
switchboard-on-demand = "0.10.5"
