[package]
name = "swarmteams"
version = "0.1.0"
description = "SwarmTeams - ZK-Private Agent Collaboration Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swarmteams"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022"] }
groth16-solana = "0.1"
solana-poseidon = "4.0"
constant_time_eq = "=0.3.1"
