[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reality-fork-sim"
version = "0.1.0"
description = "Reality Fork simulation service for the KAMIYO protocol"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "camel-ai[oasis]>=0.2.5",
]

[project.scripts]
serve = "uvicorn src.app:app --host 0.0.0.0 --port 10000"
