[package]
name = "trust-layer-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTTP + Postgres + Kafka gateway for kamiyo-trust-layer"

[dependencies]
kamiyo-trust-layer = { path = "../../crates/kamiyo-trust-layer" }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
