[package]
name = "noir-verifier"
version = "0.1.0"
description = "On-chain Groth16 verifier for Kamiyo Noir circuits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "noir_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
