[package]
name = "kamiyo_bounty_resolver"
version = "0.1.0"
description = "Created by KAMIYO Agent Factory"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_bounty_resolver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
